Add style to the footer section

--- a/style.css
+++ b/style.css
@@ -52,3 +52,14 @@ ul {
 ul li {
     padding: 5px;
 }
+
+footer {
+    font-family: 'Monaco', sans-serif;
+    margin-top: 2%;
+    font-size: 0.8em;
+    margin-bottom: 1%;
+}
+
+footer a, footer a:hover {
+    color: black;
+}
